@@ -371,8 +371,7 @@ public class JSONTokener {
                 if (s.length() > 2 &&
                         (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
                     try {
-                        return new Integer(Integer.parseInt(s.substring(2),
-                                16));
+                        return Integer.valueOf(Integer.parseInt(s.substring(2), 16));
                     } catch (Exception e) {
                         /* Ignore the error */
                     }
@@ -388,10 +387,10 @@ public class JSONTokener {
                 return new Integer(s);
             } catch (Exception e) {
                 try {
-                    return new Long(s);
+                    return Long.valueOf(s);
                 } catch (Exception f) {
                     try {
-                        return new Double(s);
+                        return Double.valueOf(s);
                     }  catch (Exception g) {
                         return s;
                     }
